tests/fixtures/invalid/pow_str_dict_bool.py
# Cannot call pow() with Str, Dict[str, int], Bool
x = pow("hello", {"a": 1}, True)
